Fix vk app height overflow issue

--- a/src/moviesapp/static/css/style.css
+++ b/src/moviesapp/static/css/style.css
@@ -90,12 +90,11 @@ label.error {
 #movie-count img {
   margin-top: 10px;
 }
-/*
+
 .vk {
   overflow-y: scroll;
-  height: 800px;
+  height: 740px;
 }
-*/
 
 .feed-action-data {
   min-width: 125px;
